# aws_python_exercise

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/client/: client.py
