[tool.poetry]
name = "aws_python_example"
version = "0.1.0"
description = "This a exmaple"
authors = ["Juan Sebastian Sanchez Hernandez <=>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
boto3 = "^1.26.51"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
